bibtex entry created at bibtex.bib

--- a/bibtex.bib
+++ b/bibtex.bib
@@ -1,8 +1,16 @@
-@software{Developer Primer0.0.1,
+@comment{@software{Developer Primer0.0.1,
  author = {},
  date = {2021-05-03},
  title = {Developer Primer},
  url = {},
+ version = {0.0.1}
+}}
+
+@software{Developer Primer0.0.1,
+ author = {G.H. Garrett},
+ date = {2021-05-03},
+ title = {Developer Primer},
+ url = {https://github.com/tudat-team/developer-primer},
  version = {0.0.1}
 }
 
