bibtex entry created at bibtex.bib

--- a/bibtex.bib
+++ b/bibtex.bib
@@ -1,9 +1,7 @@
-
-
-@software{DeveloperPrimer0.0.1,
+@software{developer-primer0.0.1,
  author = {G.H. Garrett},
  date = {2021-05-03},
- title = {Developer Primer},
+ title = {developer-primer},
  url = {https://github.com/tudat-team/developer-primer},
  version = {0.0.1}
 }
